Fix user menu and lang menu on mobile and standardize interaction (#7065)

--- a/kuma/static/styles/minimalist/components/_login.scss
+++ b/kuma/static/styles/minimalist/components/_login.scss
@@ -33,6 +33,9 @@
         width: 40px;
         height: 40px;
         border-radius: 50%;
+        /* avoid click events being sent from
+         the avatar image */
+        pointer-events: none;
     }
 }
 
